fix gap on header avatar and padding of input and textarea

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -49,11 +49,19 @@ header {
 			}
 		}
 
-		.avatar {
+		div.avatar {
 			display: none;
-
+			position: relative;
 			@include tablet {
 				display: block;
+			}
+			@include desktop {
+				width: $column-desktop;
+			}
+
+			img.avatar {
+				position: absolute;
+				right: 0;
 			}
 		}
 	}
