--- a/src/components/Main/CommentsList/Comment/Comment.scss
+++ b/src/components/Main/CommentsList/Comment/Comment.scss
@@ -10,6 +10,7 @@ article {
 
 	div.avatar {
 		flex-shrink: 0;
+		background-color: $bf-silver;
 	}
 
 	.comment {
