--- a/src/components/Main/Info/Info.scss
+++ b/src/components/Main/Info/Info.scss
@@ -10,9 +10,6 @@
 
 		h1 {
 			@include header;
-			@include tablet {
-				padding-bottom: $unit * 2;
-			}
 			@include desktop {
 				padding-right: $gutter-desktop;
 			}
